updated workflow agian :D

--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -55,8 +55,8 @@ jobs:
             cd /var/www/html
             rm -rf *
             git clone https://${{secrets.PAT}}@github.com/LucasCode812/Lucas-test-pipeline.git
-            mv /var/www/html/migration-support-services-code/* /var/www/html/
-            rm -rf ./migration-support-services-code/
+            mv /var/www/html/Lucas-test-pipeline/* /var/www/html/
+            rm -rf ./Lucas-test-pipeline/
 
       - name: Take server 1 out of maintenance mode
         uses: appleboy/ssh-action@v0.1.8
@@ -105,5 +105,5 @@ jobs:
             cd /var/www/html
             rm -rf *
             git clone https://${{secrets.PAT}}@github.com/LucasCode812/Lucas-test-pipeline.git
-            mv /var/www/html/migration-support-services-code/* /var/www/html/
-            rm -rf ./migration-support-services-code/
+            mv /var/www/html/Lucas-test-pipeline/* /var/www/html/
+            rm -rf ./Lucas-test-pipeline/
