--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -63,11 +63,11 @@ jobs:
     needs: [deploy-test]
 
     steps:
-      - name: Wait for approval
-        uses: pullreminders/approval-action@v2.3.0
+      - name: Wait for manual approval
+        uses: actions/wait-for-user-input@v2
         id: approval
         with:
-          message: 'Please review and approve the deployment to production'
+          prompt: 'Please approve the deployment to production.'
 
       - name: Put server 2 in maintenance mode (production_server)
         uses: appleboy/ssh-action@v0.1.8
@@ -122,3 +122,9 @@ jobs:
             sudo ufw deny 80
             sudo ufw deny 443
             sudo ufw status
+
+      - name: Wait for successful deployment
+        if: success()
+        uses: actions/wait-for-user-input@v2
+        with:
+          prompt: 'Deployment to production was successful.'
