--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -1,35 +1,43 @@
-name: Deploy Website Test --> Production
+name: CI/CD pipeline deployment Development --> Production
 
+# Welke branch gedeployed moet worden.
 on:
   push:
     branches: [main]
 
 jobs:
+  # Laatste ubuntu versie
   deploy-test:
     runs-on: ubuntu-latest
     environment: test
 
     steps:
+      # De code wordt gecheckt voor fouten.
       - name: Checkout code
         uses: actions/checkout@v2
 
+      # Server 1 (test_server) wordt in maintenance mode gezet door de firewall dicht te zetten
       - name: Put server 1 in maintenance mode (test_server)
         uses: appleboy/ssh-action@v0.1.8
         with:
+          # In Github secrets heb ik de credentials en secret keys toegevoegd.
           host: ${{ secrets.VM1_HOST  }}
           username: ${{ secrets.VM1_USERNAME  }}
           key: ${{ secrets.VM1_KEY }}
+          # Firewall dichtzetten.
           script: |
             sudo ufw deny 80
             sudo ufw deny 443
             sudo ufw status
 
+      # Webservice naar (test_server) deployen.
       - name: Deploy to server 1 (test_server)
         uses: appleboy/ssh-action@v0.1.8
         with:
           host: ${{ secrets.VM1_HOST  }}
           username: ${{ secrets.VM1_USERNAME  }}
           key: ${{ secrets.VM1_KEY }}
+          # Huide html pagina verwijderen en nieuwe geupdate versie toevoegen.
           script: |
             echo ${{secrets.PAT}}
             cd /var/www/html
@@ -38,6 +46,7 @@ jobs:
             sudo mv /var/www/html/Lucas-test-pipeline/* /var/www/html/
             sudo rm -rf ./Lucas-test-pipeline/
 
+      # Server open zetten in de firewall.
       - name: Take server 1 (test_server) out of maintenance mode
         uses: appleboy/ssh-action@v0.1.8
         with:
@@ -49,6 +58,7 @@ jobs:
             sudo ufw allow 443
             sudo ufw status
 
+      # Testen of de server online en bereikbaar is.
       - name: Test server 1 (test_server)
         run: |
           response=$(curl -I ${{ secrets.VM1_HOST  }} | head -n 1 | cut -d$' ' -f2)
@@ -57,17 +67,21 @@ jobs:
             exit 1
           fi
 
+  # Naar productie server deployen.
   deploy-prod:
     runs-on: ubuntu-latest
     environment: prod
     needs: [deploy-test]
 
+    # Voordat deze stap begint wordt er om een manual-approval gevraagd.
     steps:
       - uses: trstringer/manual-approval@v1
         with:
           secret: ${{secrets.PAT}}
+          # Ik moet de approval geven.
           approvers: LucasCode812
 
+      # Als de approval is gegeveen wordt server 2 in in maintenance mode gezet.
       - name: Put server 2 in maintenance mode (production_server)
         uses: appleboy/ssh-action@v0.1.8
         with:
@@ -79,6 +93,7 @@ jobs:
             sudo ufw deny 443
             sudo ufw status
 
+      # Naar productie omgeving pushen.
       - name: Deploy to server 2 (production_server)
         uses: appleboy/ssh-action@v0.1.8
         with:
@@ -92,6 +107,7 @@ jobs:
             sudo mv /var/www/html/Lucas-test-pipeline/* /var/www/html/
             sudo rm -rf ./Lucas-test-pipeline/
 
+      # Server 2 online zetten.
       - name: Put server 2 out maintenance mode (production_server)
         uses: appleboy/ssh-action@v0.1.8
         with:
@@ -103,6 +119,7 @@ jobs:
             sudo ufw allow 443
             sudo ufw status
 
+      # Testen of de server online en bereikbaar is.
       - name: Test server 2 (production_server)
         run: |
           response=$(curl -I ${{ secrets.VM2_HOST }} | head -n 1 | cut -d$' ' -f2)
@@ -111,6 +128,7 @@ jobs:
             exit 1
           fi
 
+      # Development server offline halen.
       - name: Put server 1 in paused mode (test_server)
         uses: appleboy/ssh-action@v0.1.8
         with:
